# AdventOfCode2024

./: .gitignore  LICENSE  README.md  adventofcode2024.cabal  stack.yaml
Day1/: puzzle1.hs  puzzle2.hs
Day10/: puzzle1.hs
Day11/: puzzle1.hs  puzzle2.hs
Day12/: puzzle1.hs
Day13/: puzzle1.hs  puzzle2.hs
Day14/: puzzle1.hs
Day2/: puzzle1.hs  puzzle2.hs
Day3/: puzzle1.hs  puzzle2.hs
Day4/: puzzle1.hs  puzzle2.hs
Day5/: puzzle1.hs  puzzle2.hs
Day6/: puzzle1.hs  puzzle2.hs
Day7/: puzzle1.hs  puzzle2.hs
Day8/: puzzle1.hs  puzzle2.hs
Day9/: puzzle1.hs  puzzle2.hs
src/: Day01.hs  Day02.hs  Day03.hs  Day04.hs  Day05.hs  Day06.hs  Day07.hs  Day08.hs  Day09.hs  Day10.hs  Day11.hs  Day12.hs  Day13.hs  Day14.hs  Day15.hs  Day16.hs  Day17.hs  Day18.hs  Day19.hs  Day22.hs  Day23.hs  Day24.hs  Day25.hs  Graph.hs  Main.hs
src/Day01/: Puzzle1.hs  Puzzle2.hs
src/Day02/: Puzzle1.hs  Puzzle2.hs
src/Day03/: Puzzle1.hs  Puzzle2.hs
src/Day04/: Puzzle1.hs  Puzzle2.hs
src/Day05/: Puzzle1.hs  Puzzle2.hs
src/Day06/: Puzzle1.hs  Puzzle2.hs
src/Day07/: Puzzle1.hs  Puzzle2.hs
src/Day08/: Puzzle1.hs  Puzzle2.hs
src/Day09/: Puzzle1.hs  Puzzle2.hs
src/Day1/: Puzzle1.hs  Puzzle2.hs
src/Day10/: Puzzle1.hs  Puzzle2.hs
src/Day11/: Puzzle1.hs  Puzzle2.hs
src/Day12/: Puzzle1.hs
src/Day13/: Puzzle1.hs  Puzzle2.hs
src/Day14/: Puzzle1.hs  Puzzle2.hs
src/Day15/: Puzzle1.hs
src/Day17/: Puzzle1.hs
src/Day18/: Puzzle1.hs  Puzzle2.hs
src/Day19/: Puzzle1.hs
src/Day2/: Puzzle1.hs  Puzzle2.hs
src/Day3/: Puzzle1.hs  Puzzle2.hs
src/Day4/: Puzzle1.hs  Puzzle2.hs
src/Day5/: Puzzle1.hs  Puzzle2.hs
src/Day6/: Puzzle1.hs  Puzzle2.hs
src/Day7/: Puzzle1.hs  Puzzle2.hs
src/Day8/: Puzzle1.hs  Puzzle2.hs
src/Day9/: Puzzle1.hs  Puzzle2.hs
