cabal-version:       2.2

name:                adventofcode2024
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/Fuxino/adventofcode2024#readme
license:             MIT
license-file:        LICENSE
author:              Daniele Fucini
maintainer:          dfucini@gmail.com
copyright:           2024 Daniele Fucini
category:            Web
build-type:          Simple
extra-source-files:  README.md

executable adventofcode2024
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , array
                     , containers
                     , matrix
                     , mtl
                     , PSQueue
                     , regex-tdfa
                     , split
                     , unordered-containers
  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-record-updates
                       -Wincomplete-uni-patterns
                       -Wmissing-export-lists
                       -Wmissing-home-modules
                       -Wpartial-fields
                       -Wredundant-constraints
  other-modules:
    Day01.Puzzle1
    Day01.Puzzle2
    Day02.Puzzle1
    Day02.Puzzle2
    Day03.Puzzle1
    Day03.Puzzle2
    Day04.Puzzle1
    Day04.Puzzle2
    Day05.Puzzle1
    Day05.Puzzle2
    Day06.Puzzle1
    Day06.Puzzle2
    Day07.Puzzle1
    Day07.Puzzle2
    Day08.Puzzle1
    Day08.Puzzle2
    Day09.Puzzle1
    Day09.Puzzle2
    Day10.Puzzle1
    Day10.Puzzle2
    Day11.Puzzle1
    Day11.Puzzle2
    Day12.Puzzle1
    Day13.Puzzle1
    Day13.Puzzle2
    Day14.Puzzle1
    Day14.Puzzle2
    Day15.Puzzle1
    Day17.Puzzle1
    Day18.Puzzle1
    Day18.Puzzle2
    Day19.Puzzle1
