cabal-version:       2.2

name:                adventofcode2024
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/Fuxino/adventofcode2024#readme
license:             MIT
license-file:        LICENSE
author:              Daniele Fucini
maintainer:          dfucini@gmail.com
copyright:           2024 Daniele Fucini
category:            Web
build-type:          Simple
extra-source-files:  README.md

executable adventofcode2024
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , array
                     , containers
                     , hashable
                     , matrix
                     , mtl
                     , PSQueue
                     , regex-tdfa
                     , split
                     , unordered-containers
  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-record-updates
                       -Wincomplete-uni-patterns
                       -Wmissing-export-lists
                       -Wmissing-home-modules
                       -Wpartial-fields
                       -Wredundant-constraints
  other-modules:
    Day01
    Day02
    Day03
    Day04
    Day05
    Day06
    Day07
    Day08
    Day09
    Day10
    Day11
    Day12
    Day13
    Day14
    Day15
    Day16
    Day17
    Day18
    Day19
    Day22
    Graph
